# marcoCraft

./: .gitignore  CMakeLists.txt  README.md  SimpleShader.glsl  SimpleVertexShader.glsl  TextShader.glsl  main.cpp  minecraft.1.trace  minecraft.2.trace  minecraft.trace  textFragmentShader.glsl  textVertexShader.glsl
includes/application/: Application.cpp  Application.h
includes/camera/: camera.cpp  camera.h
includes/font/: freetype.h  text.h
includes/game/: Chunk.cpp  Chunk.h  Game.cpp  Game.h  World.cpp  World.h  game.h
includes/objects/camera/: Camera.cpp  Camera.h  camera.cpp  camera.h
includes/objects/frameCounter/: FrameCounter.cpp  FrameCounter.h
includes/objects/text/: Font.cpp  Font.h  Text.cpp  Text.h
includes/opengl/: Application.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureArray.cpp  TextureArray.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
includes/primitives/: Quad.cpp  Quad.h  TexturedCube.cpp  TexturedCube.h  TexturedQuad.cpp  TexturedQuad.h
includes/shader/: shaderLoader.cpp  shaderLoader.h
includes/text/: Text.cpp  Text.h  TextAtas.cpp  TextAtlas.h  TextShader.glsl
includes/textures/: stb_image.cpp  texture.cpp
includes/utils/: Alloc.cpp  Alloc.h  TextureAtlas.cpp  TextureAtlas.h  Timer.h  a.cpp  a.h  timer.cpp
res/shaders/: BasicScreenShader.glsl  CubeShader.glsl  DepthShader.glsl  FlatShader.glsl  GrassShader.glsl  NormalShader.glsl  SSAOBlurShader.glsl  SSAOShader.glsl  ScreenShader.glsl  SimpleShader.glsl  TextShader.glsl  TransparentShader.glsl
